syntax = "proto3";
package photo_album;

import "google/protobuf/timestamp.proto";


message Photo {
    bytes image = 1;
    string filename = 3;
    string encoding = 2;
    int32 width = 4;
    int32 height = 5;
    google.protobuf.Timestamp timestamp = 6;
}

message GetPhotoRequest {
    string filename = 1;
}

message GetPhotoResponse {
    Photo photo = 1;
}

message ListPhotosRequest {
    repeated string filenames = 1;
}

message ListPhotosResponse {
    repeated Photo photos = 1;
}

service AlbumService {
    rpc GetPhoto (GetPhotoRequest) returns (GetPhotoResponse) {

    }
    rpc ListPhotos (ListPhotosRequest) returns (ListPhotosResponse) {
    }
}